Fix the `ReserveButton` alignment in webpage mode

--- a/frontend/src/ui/Component/ReserveButton.css
+++ b/frontend/src/ui/Component/ReserveButton.css
@@ -3,6 +3,14 @@
     bottom: 20%;
     justify-content: center;
     width: 100%;
+    background-color: green;
+    max-width: 100%;
+    display: inline-flex;
+}
+
+.reserve-button-container .row {
+    width: 100%;
+    max-width: 100%;
 }
 
 .reserve-button {
